[tool.poetry]
name = "langchain"
version = "0.1.0"
description = ""
authors = ["Kento Yamamoto <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
gradio = "3.31.0"
pydantic = "1.10.7"
python-dotenv = "1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
